--- a/Loups/index.html
+++ b/Loups/index.html
@@ -7,6 +7,15 @@
     <title>@Loup's</title>
   </head>
   <body>
-
+    <div id="wrapper">
+      <div id="header">
+      </div>
+      <div id="navigation">
+      </div>
+      <div id="content">
+      </div>
+      <div id="footer">
+      </div>
+    </div>
   </body>
 </html>
