--- a/Loups/index.html
+++ b/Loups/index.html
@@ -9,10 +9,23 @@
   <body>
     <div id="wrapper">
       <div id="header">
+        <h1>@Loup's</h1>
       </div>
       <div id="navigation">
+        <a href="#">Home</a>
+        <ul>
+          <li><a href="#">articles/</a></li>
+          <li><a href="#">projects/</a></li>
+          <li><a href="#">tutorials/</a></li>
+          <li><a href="#">contact me</a></li>
+        </ul>
       </div>
       <div id="content">
+        <h1>My essays</h1>
+        <p>My last posts depend on each other, and should be read in sequence. Articles not in bold are optional.</p>
+        <ul>
+          <li><a href="#">Assignment Statement Considered Harmful.</a> Pervasive mutable state makes programs more difficult to deal with. While this is old news, most programmers don't know or don't care. It's a pity, because <a href="#">simple remedies</a> exist.</li>
+        </ul>
       </div>
       <div id="footer">
       </div>
