--- a/Loups/index.html
+++ b/Loups/index.html
@@ -12,7 +12,7 @@
         <h1>@Loup's</h1>
       </div>
       <div id="navigation">
-        <a href="#">Home</a>
+        <p><a href="#">Home</a></p>
         <ul>
           <li><a href="#">articles/</a></li>
             <ul>
@@ -35,7 +35,7 @@
         </ul>
       </div>
       <div id="content">
-        <h1>My essays</h1>
+        <h2>My essays</h2>
         <p>My last posts depend on each other, and should be read in sequence. Articles not in bold are optional.</p>
         <ul>
           <li><a href="#">Assignment Statement Considered Harmful.</a> Pervasive mutable state makes programs more difficult to deal with. While this is old news, most programmers don't know or don't care. It's a pity, because <a href="#">simple remedies</a> exist.</li>
@@ -46,8 +46,8 @@
         </ul>
       </div>
       <div id="footer">
-        <p>Contact, suggestions: send me an e-mail at <a href="#">l@loup-valliant.fr</a></p>
-        <p>Built with <a href="#">USSM</a></p>
+        <p>Contact, suggestions: send me an e-mail at <a href="#">l@loup-valliant.fr</a><br>
+        Built with <a href="#">USSM</a></p>
       </div>
     </div>
   </body>
