Validated HTML, project is complete.

--- a/Loups/index.html
+++ b/Loups/index.html
@@ -14,7 +14,7 @@
       <div id="navigation">
         <p><a href="#">Home</a></p>
         <ul>
-          <li><a href="#">articles/</a></li>
+          <li><a href="#">articles/</a>
             <ul>
               <li><a href="#">beliefs respect and facts</a></li>
               <li><a href="#">classes suck</a></li>
@@ -29,6 +29,7 @@
               <li><a href="#">is fp feasible</a></li>
               <li><a href="#">does oo sucks</a></li>
             </ul>
+          </li>
           <li><a href="#">projects/</a></li>
           <li><a href="#">tutorials/</a></li>
           <li><a href="#">contact me</a></li>
@@ -42,7 +43,7 @@
           <li><a href="#">Defining Syntactic Sugar.</a> I sometimes hear arguments about what is or is not syntactic sugar. This is an attempt at defining it.</li>
           <li><a href="#">Class-based Programming as Syntactic Sugar.</a> Most of the time "Object Oriented actually means classes. Classes are nothing more than syntactic sugar, at least in statically typed languages such as Java and C++. Sugar is not useless, but seeing past it helps us understand classes better."</li>
           <li><a href="#">Taboo "OO".</a> The term "OO" is so overloaded that we should stop using it. Better substitutes are "classes" and "prototypes."</li>
-          <li><a href="#">How Class Based Programming Sucks.</a> Classes are vastly suboptimal. Functional programming is far better.</li></li>
+          <li><a href="#">How Class Based Programming Sucks.</a> Classes are vastly suboptimal. Functional programming is far better.</li>
         </ul>
       </div>
       <div id="footer">
